--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "nodemailer": "^2.6.0"
+    "nodemailer": "^2.6.0",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "browser-sync": "^2.15.0",
